--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1228,7 +1228,7 @@ w\:* {behavior:url(#default#VML);}
 							<P><SPAN lang="EN-US" style="font-size: 13pt;">Graph data management and mining, knowledge
 									graphs, graph machine learning and large models, design and analysis of graph
 									algorithms, spectral graph theory, graph computation and their applications in
-									cross-disciplinary fields such as finance and manufacturing.
+									cross-disciplinary fields such as finance and manufacturing, AI4Science.
 									<o:p></o:p>
 								</SPAN></P>
 						</TD>
@@ -1243,12 +1243,31 @@ w\:* {behavior:url(#default#VML);}
 					</TR>
 					<TR style="mso-yfti-irow: 3;">
 						<TD style="padding: 0.75pt;">
-							<P class="MsoNormal"><B><SPAN lang="EN-US"
+							
+							<div>
+								<h4>Benchmark work</h4>
+								<div>
+									<p>
+										[VLDB'25] - Federated Graph Learning
+										&nbsp;&nbsp;&nbsp;<a
+											href="./PaperFiles/OpenFGL  A Comprehensive Benchmark for Federated Graph Learning.pdf">(pdf)</a>
+										&nbsp;&nbsp;&nbsp;<a href="https://github.com/xkLi-Allen/OpenFGL">(code)</a>
+									</p>
+
+									<p>
+										[arXiv'25] - Graph Unlearning
+										&nbsp;&nbsp;&nbsp;<a
+											href="./PaperFiles/OpenGU  A Comprehensive Benchmark for Graph Unlearning.pdf">(pdf)</a>
+										&nbsp;&nbsp;&nbsp;<a href="https://github.com/bwfan-bit/OpenGU">(code)</a>
+									</p>
+								</div>
+
+								<P class="MsoNormal"><B><SPAN lang="EN-US"
 										style='font-size: 18pt; mso-fareast-font-family: "Times New Roman";'>Selected
 										Papers</SPAN></B><SPAN lang="EN-US"
 									style='font-size: 10pt; mso-fareast-font-family: "Times New Roman";'></SPAN></P>
-							<div id="papers">
-								<div>
+
+								<div id="papers">
 									<!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
 									<!-- /* 2025年 */ -->
@@ -1297,7 +1316,8 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
+										Qin, Lu
 										Qin, Guoren Wang.
 										Density Decomposition of Bipartite Graphs. SIGMOD 2025.
 										&nbsp;&nbsp;&nbsp;<a
@@ -1307,7 +1327,8 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi
+										Zhang, Lu
 										Qin, Guoren Wang.
 										Integral Densest Subgraph Search on Directed Graphs. SIGMOD 2025.
 										<!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Minimum Spanning Tree Maintenance in Dynamic Graphs.pdf">(pdf)</a> -->
@@ -1335,7 +1356,8 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* VLDB */ -->
 									<p>
-										Qi Zhang, Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Guoren Wang.
+										Qi Zhang, Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Guoren
+										Wang.
 										Approximate Anchored
 										Densest
 										Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
@@ -1449,7 +1471,8 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* VLDB */ -->
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
+										Qin, Guoren
 										Wang. Efficient
 										Algorithms for Density Decomposition on Large Static and Dynamic Graphs. VLDB
 										2024.
@@ -1476,7 +1499,8 @@ w\:* {behavior:url(#default#VML);}
 										&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/QTCS">(code)</a>
 									</p>
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
+										Qin, Lu
 										Qin, Guoren Wang.
 										Efficient Algorithms for Pseudoarboricity Computation in Large Static and
 										Dynamic Graphs. VLDB
