--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
 				</p>
 				<p>
 					<span style='font-size:12.0pt'><strong>博士后</strong></span></br>
-				<p style='margin-top:0px'><a href="https://qizhang1996.github.io/">张琦</a></p>
 				<p style='margin-top:0px'><a href="https://qq-dai.github.io/">代强强</a></p>
 				</p>
 				<p>
@@ -171,17 +170,21 @@
 				</p>
 				<p>
 					<span style='font-size:12.0pt'><strong>已毕业博士生</strong></span></br>
-				<p style='margin-top:0px'>1.秦宏超（2015-2020在读博士，博士期间一作发表ICDE 1篇，TKDE 1篇，TBD 1篇），北京理工大学博士后，北京理工大学助理教授</p>
-				<p style='margin-top:0px'>2.张琦 (2018-2022在读博士，博士期间一作发表ICDE 3篇，TKDE
-					2篇)，北京理工大学博士后（获批博士后站前基金资助、博士后面上基金），北京科技大学副教授</p>
-				<p style='margin-top:0px'>3.代强强 (2019-2023在读博士，博士期间一作发表SIGMOD 3篇，TKDE 1篇，CIKM
-					2篇)，北京理工大学博士后（获得2024年度CCF优博、博新计划、博士后面上基金、国家青年科学基金项目资助）</p>
+				<p style='margin-top:0px'>1.<a
+						href="https://qinhc.github.io/">秦宏超</a>（2015-2020在读博士），北京理工大学博士后，北京理工大学助理教授</p>
+				<!-- ，博士期间一作发表ICDE 1篇，TKDE 1篇，TBD 1篇 -->
+				<p style='margin-top:0px'>2.<a href="https://qizhang1996.github.io/">张琦</a>
+					(2018-2022在读博士)，北京理工大学博士后（获批博士后站前基金资助、博士后面上基金），北京科技大学副教授</p>
+				<!-- ，博士期间一作发表ICDE 3篇，TKDE 2篇 -->
+				<p style='margin-top:0px'>3.<a href="https://qq-dai.github.io/">代强强</a>
+					(2019-2023在读博士)，北京理工大学博士后（获得2024年度CCF优博、博新计划、博士后面上基金、国家青年科学基金项目资助）</p>
+				<!-- ，博士期间一作发表SIGMOD 3篇，TKDE 1篇，CIKM 2篇 -->
 				</p>
 				<p><strong>课题组已毕业硕士生绝大多数都进入国内头部IT企业或者国企工作。</strong> </p>
 
 			</div>
 
-			<div class="con01_t" >
+			<div class="con01_t">
 				<h4>Benchmark工作（已开源）</h4>
 				<div class="stress">
 					<p>
@@ -204,14 +207,39 @@
 
 					<!-- /* 2025年 */ -->
 					<span style='font-size:16.0pt'><strong>2025</strong></span></br>
+
+
 					<!-- /* Accepted */ -->
 					<p>
-						Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan, Guoren Wang.
-						Colorful Star Motif Counting: Concepts, Algorithms and Applications. IEEE Transactions on
-						Knowledge and Data Engineering (Accepted).
+						Zening Li, <strong>Rong-Hua Li*</strong>, Fusheng Jin. Triangle Counting over Signed Graphs with
+						Differential Privacy, ICDE 2025 (Accepted).
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
+
+
+					<p>
+						Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua Li</strong>. On
+						Temporal-Constraint Subgraph Matching, ICDE 2025 (Accepted).
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
+						Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Ye Yuan, Guoren Wang*.
+						Truss Decomposition in Hypergraphs, VLDB 2025 (Accepted).
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
+						Lantian Xu, <strong>Rong-Hua Li*</strong>, Dong Wen, Qiangqiang Dai, Guoren Wang. Efficient
+						Antagonistic k-plex Enumeration in Signed Graphs, IEEE Transactions on Big Data (Accepted).
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+
 
 					<p>
 						Xiang Wu, Hongchao Qin , <strong>Rong-Hua Li*</strong> , Yuchen Meng, Huanzhong Duan, Yanxiong
@@ -309,6 +337,7 @@
 					</p>
 
 
+
 					<!-- /* AAAI */ -->
 
 					<!-- /* WWW */ -->
@@ -331,6 +360,14 @@
 					</p>
 
 					<!-- /* TKDE */ -->
+					<p>
+						Hongchao Qin, Gao Sen, Rong-Hua Li, Hongzhi Chen, Ye Yuan, Guoren Wang: Colorful Star Motif
+						Counting: Concepts, Algorithms and Applications. IEEE Trans. Knowl. Data
+						Eng. 37(3): 1105-1125 (2025)
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/Colorful Star Motif Counting  Concepts, Algorithms and Applications.pdf">(pdf)</a>
+						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
 
 					<!-- /* CIKM */ -->
 
@@ -1164,7 +1201,7 @@
 				<p>1.&nbsp;&nbsp;&nbsp;&nbsp;基于原生图模型的分布式图存储和图计算方法与技术研究，国家自然科学联合基金重点项目，U2241211，2023-01至2026-12，259万，在研，主持
 				</p>
 
-				<p>2.&nbsp;&nbsp;&nbsp;&nbsp;基于5G网络的智能产线云边端协同管控系统的架构设计与安全评估技术，国家重点研发计划课题, 2021YFB3301301, 2021-12 至
+				<p>2.&nbsp;&nbsp;&nbsp;&nbsp;云边端协同管控系统的体系架构与安全评估，国家重点研发计划课题, 2021YFB3301301, 2021-12 至
 					2024-01, 188万元, 在研, 主持</p>
 
 				<p>3.&nbsp;&nbsp;&nbsp;&nbsp;面向大规模时序图数据的子图匹配查询处理研究，国家自然科学基金面上项目，62072034，2021-01至2024-12，57万元，在研，主持</p>
@@ -1244,7 +1281,7 @@
 	<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2025.3.15
+				Rong-Hua Li</a> | 更新时间2025.3.26
 		</div>
 	</div>
 	<!-- end of footer -->
