--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1243,7 +1243,7 @@ w\:* {behavior:url(#default#VML);}
 					</TR>
 					<TR style="mso-yfti-irow: 3;">
 						<TD style="padding: 0.75pt;">
-							
+
 							<div>
 								<h4>Benchmark work</h4>
 								<div>
@@ -1263,25 +1263,53 @@ w\:* {behavior:url(#default#VML);}
 								</div>
 
 								<P class="MsoNormal"><B><SPAN lang="EN-US"
-										style='font-size: 18pt; mso-fareast-font-family: "Times New Roman";'>Selected
-										Papers</SPAN></B><SPAN lang="EN-US"
-									style='font-size: 10pt; mso-fareast-font-family: "Times New Roman";'></SPAN></P>
+											style='font-size: 18pt; mso-fareast-font-family: "Times New Roman";'>Selected
+											Papers</SPAN></B><SPAN lang="EN-US"
+										style='font-size: 10pt; mso-fareast-font-family: "Times New Roman";'></SPAN></P>
 
 								<div id="papers">
 									<!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
 									<!-- /* 2025年 */ -->
 									<span style='font-size:12.0pt'><strong>2025</strong></span></br>
+
+
 									<!-- /* Accepted */ -->
 									<p>
-										Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan,
-										Guoren Wang.
-										Colorful Star Motif Counting: Concepts, Algorithms and Applications. IEEE
-										Transactions on
-										Knowledge and Data Engineering (Accepted).
+										Zening Li, <strong>Rong-Hua Li*</strong>, Fusheng Jin. Triangle Counting over
+										Signed Graphs with
+										Differential Privacy, ICDE 2025 (Accepted).
 										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 									</p>
+
+
+									<p>
+										Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua
+											Li</strong>. On
+										Temporal-Constraint Subgraph Matching, ICDE 2025 (Accepted).
+										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
+
+									<p>
+										Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Ye Yuan,
+										Guoren Wang*.
+										Truss Decomposition in Hypergraphs, VLDB 2025 (Accepted).
+										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
+
+									<p>
+										Lantian Xu, <strong>Rong-Hua Li*</strong>, Dong Wen, Qiangqiang Dai, Guoren
+										Wang. Efficient
+										Antagonistic k-plex Enumeration in Signed Graphs, IEEE Transactions on Big Data
+										(Accepted).
+										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
+
+
 
 									<p>
 										Xiang Wu, Hongchao Qin , <strong>Rong-Hua Li*</strong> , Yuchen Meng, Huanzhong
@@ -1400,6 +1428,7 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 
+
 									<!-- /* AAAI */ -->
 
 									<!-- /* WWW */ -->
@@ -1425,6 +1454,15 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<!-- /* TKDE */ -->
+									<p>
+										Hongchao Qin, Gao Sen, Rong-Hua Li, Hongzhi Chen, Ye Yuan, Guoren Wang: Colorful
+										Star Motif
+										Counting: Concepts, Algorithms and Applications. IEEE Trans. Knowl. Data
+										Eng. 37(3): 1105-1125 (2025)
+										&nbsp;&nbsp;&nbsp;<a
+											href="./PaperFiles/Colorful Star Motif Counting  Concepts, Algorithms and Applications.pdf">(pdf)</a>
+										<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
 
 									<!-- /* CIKM */ -->
 
