--- a/index.html
+++ b/index.html
@@ -211,28 +211,6 @@
 
 					<!-- /* Accepted */ -->
 					<p>
-						Zening Li, <strong>Rong-Hua Li*</strong>, Fusheng Jin. Triangle Counting over Signed Graphs with
-						Differential Privacy, ICDE 2025 (Accepted).
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-					</p>
-
-
-					<p>
-						Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua Li</strong>. On
-						Temporal-Constraint Subgraph Matching, ICDE 2025 (Accepted).
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-					</p>
-
-					<p>
-						Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Ye Yuan, Guoren Wang*.
-						Truss Decomposition in Hypergraphs, VLDB 2025 (Accepted).
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-					</p>
-
-					<p>
 						Lantian Xu, <strong>Rong-Hua Li*</strong>, Dong Wen, Qiangqiang Dai, Guoren Wang. Efficient
 						Antagonistic k-plex Enumeration in Signed Graphs, IEEE Transactions on Big Data (Accepted).
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
@@ -301,6 +279,13 @@
 
 					<!-- /* VLDB */ -->
 					<p>
+						Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Ye Yuan, Guoren Wang*.
+						Truss Decomposition in Hypergraphs, VLDB 2025.
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
 						Qi Zhang, Yalong Zhang(本科生), <strong>Rong-Hua Li*</strong>, Guoren Wang. Approximate Anchored
 						Densest
 						Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
@@ -328,6 +313,21 @@
 					<!-- /* KDD */ -->
 
 					<!-- /* ICDE */ -->
+					<p>
+						Zening Li, <strong>Rong-Hua Li*</strong>, Fusheng Jin. Triangle Counting over Signed Graphs with
+						Differential Privacy, ICDE 2025.
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+
+					<p>
+						Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua Li</strong>. On
+						Temporal-Constraint Subgraph Matching, ICDE 2025.
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
 					<p>
 						Qi Zhang, <strong>Rong-Hua Li*</strong>, Zifan Zheng, Hongchao Qin, Ye Yuan, Guoren Wang.
 						Efficient Maximum Fair Clique Search over Large Networks. ICDE 2025.
@@ -361,7 +361,7 @@
 
 					<!-- /* TKDE */ -->
 					<p>
-						Hongchao Qin, Gao Sen, Rong-Hua Li, Hongzhi Chen, Ye Yuan, Guoren Wang: Colorful Star Motif
+						Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan, Guoren Wang: Colorful Star Motif
 						Counting: Concepts, Algorithms and Applications. IEEE Trans. Knowl. Data
 						Eng. 37(3): 1105-1125 (2025)
 						&nbsp;&nbsp;&nbsp;<a
