--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1276,31 +1276,6 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* Accepted */ -->
 									<p>
-										Zening Li, <strong>Rong-Hua Li*</strong>, Fusheng Jin. Triangle Counting over
-										Signed Graphs with
-										Differential Privacy, ICDE 2025 (Accepted).
-										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-									</p>
-
-
-									<p>
-										Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua
-											Li</strong>. On
-										Temporal-Constraint Subgraph Matching, ICDE 2025 (Accepted).
-										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-									</p>
-
-									<p>
-										Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Ye Yuan,
-										Guoren Wang*.
-										Truss Decomposition in Hypergraphs, VLDB 2025 (Accepted).
-										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-									</p>
-
-									<p>
 										Lantian Xu, <strong>Rong-Hua Li*</strong>, Dong Wen, Qiangqiang Dai, Guoren
 										Wang. Efficient
 										Antagonistic k-plex Enumeration in Signed Graphs, IEEE Transactions on Big Data
@@ -1344,8 +1319,7 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
-										Qin, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
 										Qin, Guoren Wang.
 										Density Decomposition of Bipartite Graphs. SIGMOD 2025.
 										&nbsp;&nbsp;&nbsp;<a
@@ -1355,8 +1329,7 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi
-										Zhang, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu
 										Qin, Guoren Wang.
 										Integral Densest Subgraph Search on Directed Graphs. SIGMOD 2025.
 										<!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Minimum Spanning Tree Maintenance in Dynamic Graphs.pdf">(pdf)</a> -->
@@ -1384,8 +1357,15 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* VLDB */ -->
 									<p>
-										Qi Zhang, Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Guoren
-										Wang.
+										Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Longlong Lin, Ye Yuan,
+										Guoren Wang*.
+										Truss Decomposition in Hypergraphs, VLDB 2025.
+										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
+
+									<p>
+										Qi Zhang, Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Guoren Wang.
 										Approximate Anchored
 										Densest
 										Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
@@ -1417,6 +1397,23 @@ w\:* {behavior:url(#default#VML);}
 									<!-- /* KDD */ -->
 
 									<!-- /* ICDE */ -->
+									<p>
+										Zening Li, <strong>Rong-Hua Li*</strong>, Fusheng Jin. Triangle Counting over
+										Signed Graphs with
+										Differential Privacy, ICDE 2025.
+										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
+
+
+									<p>
+										Xiaoyu Leng, Guang Zeng, Hongchao Qin, Longlong Lin, <strong>Rong-Hua
+											Li</strong>. On
+										Temporal-Constraint Subgraph Matching, ICDE 2025.
+										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
+
 									<p>
 										Qi Zhang, <strong>Rong-Hua Li*</strong>, Zifan Zheng, Hongchao Qin, Ye Yuan,
 										Guoren Wang.
@@ -1455,8 +1452,8 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* TKDE */ -->
 									<p>
-										Hongchao Qin, Gao Sen, Rong-Hua Li, Hongzhi Chen, Ye Yuan, Guoren Wang: Colorful
-										Star Motif
+										Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan,
+										Guoren Wang: Colorful Star Motif
 										Counting: Concepts, Algorithms and Applications. IEEE Trans. Knowl. Data
 										Eng. 37(3): 1105-1125 (2025)
 										&nbsp;&nbsp;&nbsp;<a
@@ -1509,8 +1506,7 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* VLDB */ -->
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
-										Qin, Guoren
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren
 										Wang. Efficient
 										Algorithms for Density Decomposition on Large Static and Dynamic Graphs. VLDB
 										2024.
@@ -1537,8 +1533,7 @@ w\:* {behavior:url(#default#VML);}
 										&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/QTCS">(code)</a>
 									</p>
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
-										Qin, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
 										Qin, Guoren Wang.
 										Efficient Algorithms for Pseudoarboricity Computation in Large Static and
 										Dynamic Graphs. VLDB
