--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 						Counting Cohesive Subgraphs with Hereditary Properties. WWW 2025.
 						&nbsp;&nbsp;&nbsp;<a
 							href="./PaperFiles/Counting Cohesive Subgraphs with Hereditary Properties.pdf">(pdf)</a>
-						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						&nbsp;&nbsp;&nbsp;<a href="https://github.com/LightWant/HCS2">(code)</a>
 					</p>
 
 					<!-- /* TKDE */ -->
