--- a/index.html
+++ b/index.html
@@ -210,6 +210,20 @@
 
 
 					<!-- /* Accepted */ -->
+
+					<p>
+						Xunkai Li, Zhengyu Wu, Kaichi Yu, Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Guoren Wang. Toward Data-centric Directed Graph Learning: An Entropy-driven Approach. ICML 2025 (Accepted).
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
+						Yichun Yang, <strong>Rong-Hua Li*</strong>, Meihao Liao, Guoren Wang. Improved Algorithms for Effective Resistance Computation on Graphs. COLT 2025 (Accepted).
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+
 					<p>
 						Lantian Xu, <strong>Rong-Hua Li*</strong>, Dong Wen, Qiangqiang Dai, Guoren Wang. Efficient
 						Antagonistic k-plex Enumeration in Signed Graphs, IEEE Transactions on Big Data (Accepted).
@@ -219,13 +233,7 @@
 
 
 
-					<p>
-						Xiang Wu, Hongchao Qin , <strong>Rong-Hua Li*</strong> , Yuchen Meng, Huanzhong Duan, Yanxiong
-						Lu, Yujing Gao, Fusheng Jin, and Guoren Wang. Effective Personalized Search With Heterogeneous
-						Graph Based Hawkes Process. IEEE Transactions on Big Data (Accepted).
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
-					</p>
+					
 
 					<!-- /* PODS */ -->
 
@@ -372,6 +380,15 @@
 					<!-- /* CIKM */ -->
 
 					<!-- /* IJCAI */ -->
+
+					<!-- /* TBD */ -->
+					<p>
+						Xiang Wu, Hongchao Qin , <strong>Rong-Hua Li*</strong> , Yuchen Meng, Huanzhong Duan, Yanxiong
+						Lu, Yujing Gao, Fusheng Jin, and Guoren Wang. Effective Personalized Search With Heterogeneous
+						Graph Based Hawkes Process. IEEE Transactions on Big Data 11(2): 402-413 (2025).
+						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Effective Personalized Search With Heterogeneous Graph Based Hawkes Process.pdf">(pdf)</a>
+				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
 
 					<!-- 2025更新完毕 -->
 
@@ -1281,7 +1298,7 @@
 	<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2025.3.26
+				Rong-Hua Li</a> | 更新时间2025.5.5
 		</div>
 	</div>
 	<!-- end of footer -->
