--- a/index.html
+++ b/index.html
@@ -205,6 +205,34 @@
 				<div id="papers">
 					<!-- /* 顺序：PODS,SIGMOD,VLDB,KDD,ICDE,AAAI,WWW,TKDE,CIKM,IJICA */ -->
 
+					<!-- /* 2026年 */ -->
+					<span style='font-size:16.0pt'><strong>2026</strong></span></br>
+
+
+					<!-- /* Accepted */ -->
+					<p>
+						Junjie Zhou, Meihao Liao, Rong-Hua Li*, Longlong Lin, Guoren Wang. One Index for All: Towards
+						Efficient Personalized PageRank Computation for Every Damping Factor. SIGMOD 2026 (Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
+						Yue Zeng, Miao Qiao, Rong-Hua Li*, Hongchao Qin, Guoren Wang. Scaling Up k-Clique Percolation
+						Community Detection. SIGMOD 2026 (Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+					<p>
+						Xiaowei Ye, Rong-Hua Li*, Guoren Wang*. The Power of Core Clique Removal for Exact Clique
+						Enumeration. SIGMOD 2026 (Accepted)
+						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+					</p>
+
+
+
 					<!-- /* 2025年 */ -->
 					<span style='font-size:16.0pt'><strong>2025</strong></span></br>
 
@@ -212,13 +240,16 @@
 					<!-- /* Accepted */ -->
 
 					<p>
-						Xunkai Li, Zhengyu Wu, Kaichi Yu, Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>, Guoren Wang. Toward Data-centric Directed Graph Learning: An Entropy-driven Approach. ICML 2025 (Accepted).
+						Xunkai Li, Zhengyu Wu, Kaichi Yu, Hongchao Qin, Guang Zeng, <strong>Rong-Hua Li*</strong>,
+						Guoren Wang. Toward Data-centric Directed Graph Learning: An Entropy-driven Approach. ICML 2025
+						(Accepted).
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 					<p>
-						Yichun Yang, <strong>Rong-Hua Li*</strong>, Meihao Liao, Guoren Wang. Improved Algorithms for Effective Resistance Computation on Graphs. COLT 2025 (Accepted).
+						Yichun Yang, <strong>Rong-Hua Li*</strong>, Meihao Liao, Guoren Wang. Improved Algorithms for
+						Effective Resistance Computation on Graphs. COLT 2025 (Accepted).
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
@@ -233,7 +264,7 @@
 
 
 
-					
+
 
 					<!-- /* PODS */ -->
 
@@ -369,7 +400,8 @@
 
 					<!-- /* TKDE */ -->
 					<p>
-						Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan, Guoren Wang: Colorful Star Motif
+						Hongchao Qin, Gao Sen, <strong>Rong-Hua Li</strong>, Hongzhi Chen, Ye Yuan, Guoren Wang:
+						Colorful Star Motif
 						Counting: Concepts, Algorithms and Applications. IEEE Trans. Knowl. Data
 						Eng. 37(3): 1105-1125 (2025)
 						&nbsp;&nbsp;&nbsp;<a
@@ -386,8 +418,9 @@
 						Xiang Wu, Hongchao Qin , <strong>Rong-Hua Li*</strong> , Yuchen Meng, Huanzhong Duan, Yanxiong
 						Lu, Yujing Gao, Fusheng Jin, and Guoren Wang. Effective Personalized Search With Heterogeneous
 						Graph Based Hawkes Process. IEEE Transactions on Big Data 11(2): 402-413 (2025).
-						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Effective Personalized Search With Heterogeneous Graph Based Hawkes Process.pdf">(pdf)</a>
-				<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						&nbsp;&nbsp;&nbsp;<a
+							href="./PaperFiles/Effective Personalized Search With Heterogeneous Graph Based Hawkes Process.pdf">(pdf)</a>
+						<!-- &nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 					<!-- 2025更新完毕 -->
@@ -1151,7 +1184,7 @@
 
 					<!-- 2014 -->
 
-					<!-- /* TKDE -->
+					<!-- /* TKDE */ -->
 					<p>
 						<strong>Rong-Hua Li</strong>, Jeffrey Xu Yu, Rui Mao. Efficient Core Maintenance in Large
 						Dynamic Graphs. IEEE Transactions on Knowledge and Data Engineering 26(10): 2453-2465 (2014)
@@ -1159,7 +1192,7 @@
 							href="./PaperFiles/Efficient Core Maintenance in Large Dynamic Graphs.pdf">(pdf)</a>
 					</p>
 
-					<!-- /* ICDE -->
+					<!-- /* ICDE */ -->
 					<p>
 						<strong>Rong-Hua Li</strong> Jeffrey Xu Yu, Xin Huang, Hong Cheng. Random-walk domination in
 						large graphs. ICDE 2014: 736-747
@@ -1175,7 +1208,7 @@
 
 					<!-- 2013 -->
 
-					<!-- /* VLDB -->
+					<!-- /* VLDB */ -->
 					<p>
 						Xin Huang, Hong Cheng, <strong>Rong-Hua Li</strong>, Lu Qin, Jeffrey Xu Yu. Top-K Structural
 						Diversity Search in Large Networks. PVLDB 6(13): 1618-1629 (2013)
@@ -1183,7 +1216,7 @@
 							href="./PaperFiles/Top-K Structural Diversity Search in Large Networks(2013).pdf">(pdf)</a>
 					</p>
 
-					<!-- /* TKDE -->
+					<!-- /* TKDE */ -->
 					<p>
 						<strong>Rong-Hua Li</strong>, Jeffrey Xu Yu. Scalable Diversified Ranking on Large Graphs. IEEE
 						Transactions on Knowledge and Data Engineering 25(9): 2133-2146 (2013)
@@ -1193,7 +1226,7 @@
 
 					<!-- 2012 -->
 
-					<!-- /* Others -->
+					<!-- /* Others */ -->
 					<p>
 						<strong>Rong-Hua Li</strong>, Jeffrey Xu Yu, Xin Huang, Hong Cheng. Robust Reputation-Based
 						Ranking on Bipartite Rating Networks. SDM 2012: 612-623
@@ -1203,7 +1236,7 @@
 
 					<!-- 2011 -->
 
-					<!-- /* CIKM -->
+					<!-- /* CIKM */ -->
 					<p>
 						<strong>Rong-Hua Li</strong>, Jeffrey Xu Yu, Jianquan Liu. Link prediction: the power of maximal
 						entropy random walk. CIKM 2011: 1147-1156
@@ -1298,7 +1331,7 @@
 	<div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
 		<div style="text-align: center;width: 100%">
 			Copyright © 2018 李荣华的个人信息 | Designed by <a href="#" target="./index.html">
-				Rong-Hua Li</a> | 更新时间2025.5.5
+				Rong-Hua Li</a> | 更新时间2025.5.26
 		</div>
 	</div>
 	<!-- end of footer -->
