--- a/index.html
+++ b/index.html
@@ -211,21 +211,21 @@
 
 					<!-- /* Accepted */ -->
 					<p>
-						Junjie Zhou, Meihao Liao, Rong-Hua Li*, Longlong Lin, Guoren Wang. One Index for All: Towards
+						Junjie Zhou, Meihao Liao, <strong>Rong-Hua Li*</strong>, Longlong Lin, Guoren Wang. One Index for All: Towards
 						Efficient Personalized PageRank Computation for Every Damping Factor. SIGMOD 2026 (Accepted)
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 					<p>
-						Yue Zeng, Miao Qiao, Rong-Hua Li*, Hongchao Qin, Guoren Wang. Scaling Up k-Clique Percolation
+						Yue Zeng, Miao Qiao, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Guoren Wang. Scaling Up k-Clique Percolation
 						Community Detection. SIGMOD 2026 (Accepted)
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 					<p>
-						Xiaowei Ye, Rong-Hua Li*, Guoren Wang*. The Power of Core Clique Removal for Exact Clique
+						Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Guoren Wang*. The Power of Core Clique Removal for Exact Clique
 						Enumeration. SIGMOD 2026 (Accepted)
 						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
