--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1276,7 +1276,7 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* Accepted */ -->
 									<p>
-										Junjie Zhou, Meihao Liao, <strong>Rong-Hua Li*</strong>, Longlong Lin, Guoren Wang. One Index for
+										Junjie Zhou, Meihao Liao, <strong>Rong-Hua Li*</strong>, Longlong Lin, Guoren Wang*. One Index for
 										All: Towards
 										Efficient Personalized PageRank Computation for Every Damping Factor. SIGMOD
 										2026 (Accepted)
@@ -1285,7 +1285,7 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yue Zeng, Miao Qiao, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Guoren Wang. Scaling Up
+										Yue Zeng, Miao Qiao, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Guoren Wang*. Scaling Up
 										k-Clique Percolation
 										Community Detection. SIGMOD 2026 (Accepted)
 										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
