--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1276,7 +1276,8 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* Accepted */ -->
 									<p>
-										Junjie Zhou, Meihao Liao, <strong>Rong-Hua Li*</strong>, Longlong Lin, Guoren Wang*. One Index for
+										Junjie Zhou, Meihao Liao, <strong>Rong-Hua Li*</strong>, Longlong Lin, Guoren
+										Wang*. One Index for
 										All: Towards
 										Efficient Personalized PageRank Computation for Every Damping Factor. SIGMOD
 										2026 (Accepted)
@@ -1285,7 +1286,8 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yue Zeng, Miao Qiao, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Guoren Wang*. Scaling Up
+										Yue Zeng, Miao Qiao, <strong>Rong-Hua Li*</strong>, Hongchao Qin, Guoren Wang*.
+										Scaling Up
 										k-Clique Percolation
 										Community Detection. SIGMOD 2026 (Accepted)
 										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
@@ -1293,7 +1295,8 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Guoren Wang*. The Power of Core Clique Removal for
+										Xiaowei Ye, <strong>Rong-Hua Li*</strong>, Guoren Wang*. The Power of Core
+										Clique Removal for
 										Exact Clique
 										Enumeration. SIGMOD 2026 (Accepted)
 										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
@@ -1363,7 +1366,8 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
+										Qin, Lu
 										Qin, Guoren Wang.
 										Density Decomposition of Bipartite Graphs. SIGMOD 2025.
 										&nbsp;&nbsp;&nbsp;<a
@@ -1373,7 +1377,8 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi Zhang, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Longlong Lin, Qi
+										Zhang, Lu
 										Qin, Guoren Wang.
 										Integral Densest Subgraph Search on Directed Graphs. SIGMOD 2025.
 										<!-- &nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Minimum Spanning Tree Maintenance in Dynamic Graphs.pdf">(pdf)</a> -->
@@ -1409,7 +1414,8 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<p>
-										Qi Zhang, Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Guoren Wang.
+										Qi Zhang, Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Guoren
+										Wang.
 										Approximate Anchored
 										Densest
 										Subgraph Search on Large Static and Dynamic Graphs. VLDB 2025.
@@ -1563,7 +1569,8 @@ w\:* {behavior:url(#default#VML);}
 
 									<!-- /* VLDB */ -->
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Guoren
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
+										Qin, Guoren
 										Wang. Efficient
 										Algorithms for Density Decomposition on Large Static and Dynamic Graphs. VLDB
 										2024.
@@ -1590,7 +1597,8 @@ w\:* {behavior:url(#default#VML);}
 										&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali/QTCS">(code)</a>
 									</p>
 									<p>
-										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao Qin, Lu
+										Yalong Zhang(undergraduate), <strong>Rong-Hua Li*</strong>, Qi Zhang, Hongchao
+										Qin, Lu
 										Qin, Guoren Wang.
 										Efficient Algorithms for Pseudoarboricity Computation in Large Static and
 										Dynamic Graphs. VLDB
