--- a/groupPhotos.html
+++ b/groupPhotos.html
@@ -248,34 +248,19 @@ h2 {
 		style="padding-top:20px">
 		<div class="panel-body">
 			<div class="picshow picshow01">
-				<h2>师生合影</h2>
+				<h2>2025</h2>
 				<div class="black_cline"></div>
 				<div class="piclist">
 					<ul>
 						<li class="pic">
 							<div class="in">
-								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/TecStuPho/ts01.jpg" /></div>
-							</div>
-						</li>
-						<li class="pic">
-							<div class="in">
-								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/TecStuPho/ts02.jpg" /></div>
-							</div>
-						</li>
-						<li class="pic">
-							<div class="in">
-								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/TecStuPho/ts03.jpg" /></div>
-							</div>
-						</li>
-						<li class="pic">
-							<div class="in">
-								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/TecStuPho/ts04.jpg" /></div>
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/2025/2025-graduate.JPG" /></div>
 							</div>
 						</li>
 					</ul>
 				</div>
 
-				<h2>最近一年</h2>
+				<h2>2024</h2>
 				<div class="black_cline"></div>
 				<div class="piclist">
 					<ul>
@@ -301,6 +286,33 @@ h2 {
 						</li>
 					</ul>
 				</div>
+
+				<h2>师生合影</h2>
+				<div class="black_cline"></div>
+				<div class="piclist">
+					<ul>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/TecStuPho/ts01.jpg" /></div>
+							</div>
+						</li>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/TecStuPho/ts02.jpg" /></div>
+							</div>
+						</li>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/TecStuPho/ts03.jpg" /></div>
+							</div>
+						</li>
+						<li class="pic">
+							<div class="in">
+								<div class="imgdiv"><img class="img-thumbnail" src="groupPhotos/TecStuPho/ts04.jpg" /></div>
+							</div>
+						</li>
+					</ul>
+				</div>		
 			</div>
 	    </div>
 	</div>
