--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1303,6 +1303,20 @@ w\:* {behavior:url(#default#VML);}
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
 									</p>
 
+									<!-- /* TKDE */ -->
+									Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin, Jin Zhao. Provable
+									Higher-order Graph Clustering: the Power of Peeling-based Approaches. TKDE, 2026
+									(Accepted)
+									<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+
+									<!-- /* TBD */ -->
+									Longlong Lin, Yue He, Wei Chen, Pingpeng Yuan, <strong>Rong-Hua Li</strong>, Tao Jia. Effective and
+									Efficient Conductance-based Community Search at Billion Scale. IEEE Transactions on
+									Big Data, 2026 (Accepted)
+									<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+
 
 
 									<!-- /* 2025年 */ -->
