--- a/ronghuali.html
+++ b/ronghuali.html
@@ -1304,18 +1304,23 @@ w\:* {behavior:url(#default#VML);}
 									</p>
 
 									<!-- /* TKDE */ -->
-									Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin, Jin Zhao. Provable
-									Higher-order Graph Clustering: the Power of Peeling-based Approaches. TKDE, 2026
-									(Accepted)
-									<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+									<p>
+										Longlong Lin, Zeli Wang, <strong>Rong-Hua Li</strong>, Qiyu Liu, Hongchao Qin,
+										Jin Zhao. Provable Higher-order Graph Clustering: the Power of Peeling-based
+										Approaches. TKDE, 2026 (Accepted)
+										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
+
 
 									<!-- /* TBD */ -->
-									Longlong Lin, Yue He, Wei Chen, Pingpeng Yuan, <strong>Rong-Hua Li</strong>, Tao Jia. Effective and
-									Efficient Conductance-based Community Search at Billion Scale. IEEE Transactions on
-									Big Data, 2026 (Accepted)
-									<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
+									<p>
+										Longlong Lin, Yue He, Wei Chen, Pingpeng Yuan, <strong>Rong-Hua Li</strong>, Tao
+										Jia. Effective and Efficient Conductance-based Community Search at Billion
+										Scale. IEEE Transactions on Big Data, 2026 (Accepted)
+										<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
 				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+									</p>
 
 
 
