--- a/index.html
+++ b/index.html
@@ -266,8 +266,9 @@
 					<p>
 						Yichun Yang, <strong>Rong-Hua Li*</strong>, Meihao Liao, Guoren Wang. Improved Algorithms for
 						Effective Resistance Computation on Graphs. COLT 2025 (Accepted).
-						<!-- &nbsp;&nbsp;&nbsp;<a href="#">(pdf)</a>
-				&nbsp;&nbsp;&nbsp;<a href="https://github.com/ronghuali">(code)</a> -->
+						&nbsp;&nbsp;&nbsp;<a href="./PaperFiles/Improved Algorithms for Effective Resistance Computation on Graphs.pdf">(pdf)</a>
+				&nbsp;&nbsp;&nbsp;
+						<!-- <a href="https://github.com/ronghuali">(code)</a> -->
 					</p>
 
 
