--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<p><strong>欢迎有意加入本课题组的人员发邮件咨询： lironghuabit@126.com</strong> </p>
 
 				<p style="font-size: 24px; color: red; font-weight: bold;">
-					图学习和大模型方向招本科实习生、保研硕士生、直博生等，感兴趣的可以发邮件联系，同时先阅读<a href="./tutorial/从零开始做科研.pdf">这个文档</a>。
+					图学习和大模型方向招本科实习生、保研硕士生、直博生等，感兴趣的可以发邮件联系，同时先阅读<a href="./tutorial/以数据为中心的图智能.pdf">这个文档</a>。
 				</p>
 			</div>
 
